@@ -1,3 +1,5 @@
+- replace some uses of $ with jQuery
+
 = 3.4.39
 - fix removing delete link with config.delete.link = false, broken on 3.4.38
 - fix position of nested action groups
